# skips-db

./: API.md  Cargo.toml  DATABASE_LICENSE.md  Dockerfile  README.md
.github/workflows/: docker.yml
migrations/: 01_init.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
static/: index.html
