[package]
name = "skips-db"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "json", "http1", "tokio"], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "macros", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], default-features = false }
uuid = { version = "1", features = ["serde"], default-features = false }
